= 0.3.3 / ???
  + Updates to the cod rewrite, this eliminates the dependency on 
    beanstalk-client.
    
  + Works and is designed only for beanstalk now. This allows usage of some
    advanced queuing features. 

  + Breaking change: Default server is now 'localhost:11300', not a server on
    the LAN we might not even own.

= 0.3.2 / 31Aug2011

  . gemspec fix

= 0.3.1 / 31Aug2011

  . small refactorings

= 0.3.0 / 20Jul2011

  + Channel names are generated using UUIDs. No duplicate detection yet. 

= 0.2.0 / 26Apr2011

  + Starting with this version, zack depends on Cod for all its inner workings
    and just adds RPC. This makes it lean to the point of nonexistence. 
    
= 0.1.3 / not released

  + All calls now have a default timeout of 10 seconds. Timeouts reset the
    queue in a good state. Look at the :timeout option on the client.
    
  * The big refactoring, introducing Answer and Message. 
  
  + Server exception handling: Just run with a block that acts on the exception. 

= 0.1.2 / 09-11-2010

  * FIX: Don't read our own messages back (client)

= 0.1.1 / 28-09-2010

 * Properly deletes jobs.

= 0.1.0 / 05-31-2010

  * Initial release.