@@ -8,6 +8,8 @@
   + Breaking change: Default server is now 'localhost:11300', not a server on
     the LAN we might not even own.
 
+  + Breaking change: Exception block now has two arguments. 
+
 = 0.3.2 / 31Aug2011
 
   . gemspec fix
